linkerd/manifests/network-policy-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-ingress
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
